<resources>
    <string name="app_name">MenuBurger</string>
    <string name="home">Accueil</string>
    <string name="profile">Profil</string>
    <string name="message">Message</string>
    <string name="menu_app_name">Nom de l\'application</string>
    <string name="menu_contact_mail">Adresse email de contact</string>

    <string name="welcome_nav">Page d\'accueil</string>
    <string name="fragment_nav">Message Fragment</string>
    <string name="profile_nav">Profile Fragment</string>

    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>
    <string name="parameters">Paramètres</string>
    <string name="nav_parameters">Paramètres</string>
    <string name="nav_help">Aide</string>
</resources>