<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/home"        />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile"        />
    <item
        android:id="@+id/nav_messages"
        android:icon="@android:drawable/ic_menu_always_landscape_portrait"
        android:title="@string/message"        />
</group>

    <item android:title="@string/parameters">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/nav_parameters"        />
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"        />
        </menu>
    </item>
</menu>